1999-08-01  root  <guiheneu@jean.joudboeuf.fr>

	* camel/gmime-utils.c (gmime_read_line_from_stream): 
	do not return NULL when line is empty. 

	* camel/camel-multipart.c (_read_part): return true when end
	of multipart is found, not the contrary

1999-07-31  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/gmime-utils.c (gmime_read_line_from_stream): 
	Don't return crlf at end of line.

1999-07-30  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/gmime-utils.c (gmime_read_line_from_stream): 
	new function: reads a line from a stream.
	should be in streams utils maybe. 

1999-07-29  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/camel-mime-part.c (_construct_from_stream): 
	Uses data wrapper repository to find what data wrapper
	to use to construct the content from a stream. When 
	no object is registered for the mime type found in
	content type field a CamelSimpleDataWrapper is 
	used. 
	
	* camel/camel-mime-part.c (_get_content_type): 
	(camel_mime_part_get_content_type): returns
	a pointer on the content_type field instead 
	of the gchar * mime "type/subtype".

1999-07-28  bertrand  <Bertrand.Guiheneuf@aful.org>


	* camel/data-wrapper-repository.c
	* camel/data-wrapper-repository.h
	New files. Handles mime type <-> camel object
	(for example "multipart" <-> CamelMultipart
	* tests/tesst3.c: test data repository thing.

1999-07-26  bertrand  <Bertrand.Guiheneuf@aful.org>
	
	* camel/camel-multipart.c (_write_to_stream): 
	implemented output of multipart.
	
	* tests/test1.c (main): testing content objects operations. 

1999-07-25  bertrand  <Bertrand.Guiheneuf@aful.org>
	
	* camel/camel-mime-part.c (camel_mime_part_set_text): 
	new util function to set a mime part content to be 
	a text string.

	* camel/camel-simple-data-wrapper.c (camel_simple_data_wrapper_set_buffer_from_text): 
	new util func. 
	(camel_simple_data_wrapper_new): new func.

	* camel/camel-multipart.c (_write_to_stream): 
	implemented output of multiparts.
